styles/style.css
@import url('https://fonts.googleapis.com/css?family=Handlee');

html, body {
    height: 100%;
    margin: 0;
    color: white;
}

h1 {
    font-family: 'Handlee', cursive;
    font-size: 4em;
    font-weight: 400;
}

.page-container {
    background: linear-gradient( rgba(125, 16, 16, 0.035), rgba(0, 0, 0, 0.1) );
    min-height: 100%;
}

.flex {
    display: flex;
    align-items: center;
    justify-content: center;
}

.bg-photo {
    /*background and styling*/
    background: linear-gradient( rgba(107, 16, 16, 0.4), rgba(0, 0, 0, 0.5) ), url("../images/entry-bg.jpeg");
    background-size:cover
}

.strict-container {
    max-width: 50%;
    max-height: 25%;
}

.full-container {
    max-width: 100%;
    max-height: 100%;
}

.navbar a {
    color: white;
    padding-top: 1rem;
    padding-bottom: 1rem;
    padding-right: 1rem;
    padding-left: 1rem;
}

.navbar .brand {
    font-size: 1.75em;
}

.ui.four.cards>.card {
  width: calc(30% - 1em);
}

.facebook {
    background-color: #3B5998;
}

.google-plus {
    background-color: #DD4B39;
}

.twitter {
    background-color: #55ACEE;
}

.register-button {
    padding-top: 10px;
    padding-bottom: 10px;
}

.rec-button {
    padding-top: 10px;
    padding-bottom: 10px;
}

.import-button {
    padding-top: 10px;
    padding-bottom: 10px;
}

.skip-button {
  color: white;
}

.skip-button:hover {
  color: grey;
}

.recommendations-container {
    padding-top: 90px;
}

.recommendations-container .grid {
    padding-top: 15px;
}

.sort-by > a.item {
    color: black !important;
}

#flavor-by-time {
    background: url('../images/4_FlavorsOverDay.png') no-repeat;
    background-size: contain;
    overflow: hidden;
    height: 100%;
    padding-top: 140px;
    padding-left: 50px;
}

#flavor-by-time-image img {
    width: 90%;
}

#flavor-by-day {
    background: url('../images/7_FlavorsOverTime.png') no-repeat;
    background-size: contain;
    overflow: hidden;
    height: 100%;
}

